fixed spacing issues in top third

--- a/css/style.css
+++ b/css/style.css
@@ -119,11 +119,12 @@
 	height: 70px;
 	margin-top: 15px;
 	margin-bottom: 30px;
-	margin-left: 17%;
-	margin-right: 17%;
+	margin-left: auto;
+	margin-right: auto;
 	position: relative;
 	padding-right: 4px;
-	display: block;
+	display: inline block;
+	width: 400px;
 }
 
 .tablet {
@@ -149,6 +150,7 @@
 	position: absolute;
 	left: 20px;
 	display: inline;
+	left: 70px;
 }
 
 .wr-right-rectangle{
@@ -157,6 +159,7 @@
 	text-align: left;
 	display: inline;
 	width: 230px;
+
 }
 
 .wr-top-text{
@@ -187,7 +190,7 @@
 .lbb-text{
 	color: #362D51;
 	font-size: 28px;
-	margin: 0 auto;
+	margin: 15px;
 	display: inline;
 	overflow: auto;
 }
